tests/format/junctions/invalid/junction-with-deps.bst
kind: stack
runtime-depends:
- junction: base-with-deps.bst
  filename: target.bst
